CYTOSCAPE-12914 Copy/paste of annotations supports undo/redo.